# ai-powered-honeypot

./: .env.example  .gitignore  AGENTCORE_MESSAGING_IMPLEMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM_TEMPLATE.md  DASHBOARD_SYNC_README.md  DASHBOARD_UPDATE_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIGMA_SPECIFICATION.md  FREE_DIAGRAM_SOLUTIONS.md  GIT_COMMIT_SUMMARY.md  INTEGRATION_TESTING.md  MANUAL_LAMBDA_UPDATE.md  Makefile  README.md  SECURITY_TESTING_IMPLEMENTATION.md  TASK_10_1_IMPLEMENTATION_SUMMARY.md  TASK_10_3_IMPLEMENTATION_SUMMARY.md  TASK_10_3_TESTING_RESULTS.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_12_1_IMPLEMENTATION_SUMMARY.md  TASK_12_2_DEPLOYMENT_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_4_1_IMPLEMENTATION_SUMMARY.md  TASK_4_2_IMPLEMENTATION_SUMMARY.md  TASK_4_3_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_1_IMPLEMENTATION_SUMMARY.md  TASK_5_2_IMPLEMENTATION_SUMMARY.md  TASK_5_3_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_1_IMPLEMENTATION_SUMMARY.md  TASK_9_2_IMPLEMENTATION_SUMMARY.md  TASK_9_3_IMPLEMENTATION_SUMMARY.md  TESTING_SIMULATION_FRAMEWORK.md  agent.py  comprehensive_validation_suite.py  conftest.py  (+96 more)
agents/: __init__.py  base_agent.py  detection_agent.py
aws_dashboard_deployment/: README.md  app.py  cloudformation-template-old.yaml  cloudformation-template.yaml  cloudfront_config.json  deploy.sh  deploy_cf.sh  deploy_cloudformation.py  requirements.txt  setup_cloudfront_s3.py  template.yaml
config/: agentcore_health_manager.py  agentcore_sdk.py  automated_test_config.json  integration_config.json  security_test_config.json
dashboard/: app.py
deployment/: AGENTCORE_DEPLOYMENT_README.md  __init__.py  agentcore_deploy.py  agentcore_deployment_manager.py
docs/: AGENTCORE_DEPLOYMENT.md  AGENTCORE_INTEGRATION_GUIDE.md  AGENT_DEVELOPMENT_GUIDE.md  API_SPECIFICATIONS.md  DEPLOYMENT_MAINTENANCE_GUIDE.md  README.md  SYSTEM_ADMINISTRATION_GUIDE.md  SYSTEM_ARCHITECTURE.md  TROUBLESHOOTING_GUIDE.md
honeypots/: __init__.py
infrastructure/: DEPLOYMENT_GUIDE.md  README.md  config.yaml  deploy.py  deploy_complete.py  validate_deployment.py
integration/: __init__.py  aws_services_integration.py  dashboard_integration.py  (+3 more)
(+164 files in other folders)
